# orbitalsynth

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.txt  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/orbitalsynth/: __init__.py  config.py
src/orbitalsynth/orbits/: kerplerian.py  onebody.py  orbit.py  threebody_approx.py  twobody.py
src/orbitalsynth/synthesizer/: waveform.py
tests/: test_orbitalsynth.py
tests/orbits/: test.py  test_onebody.py  test_threebody_approx.py  test_twobody.py
tests/synthesizer/: test_waveform.py
