[tool.poetry]
name = "orbitalsynth"
version = "0.1.0"
description = "A package for creating sounds from the motion of massive bodies."
authors = ["Siena Hurwitz"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
