[tool.poetry]
name = "orbitalsynth"
version = "0.1.0"
description = "A package for creating sounds from the motion of massive bodies."
authors = ["Siena Hurwitz"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
scipy = "^1.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
